// Copyright 2019 Google LLC.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package google.cloud.gaming.v1alpha;

import "google/api/field_behavior.proto";
import "google/api/resource.proto";
import "google/cloud/gaming/v1alpha/common.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

option go_package = "google.golang.org/genproto/googleapis/cloud/gaming/v1alpha;gaming";

option java_multiple_files = true;
option java_package = "com.google.cloud.gaming.v1alpha";

// Request message for GameServerDeploymentsService.ListGameServerDeployments.
message ListGameServerDeploymentsRequest {
  // Required. The parent resource name, using the form:
  // `projects/{project}/locations/{location}`.
  string parent = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "gameservices.googleapis.com/GameServerDeployment"
    }
  ];

  // Optional. The maximum number of items to return.  If unspecified, server
  // will pick an appropriate default. Server may return fewer items than
  // requested. A caller should only rely on response's
  // [next_page_token][google.cloud.gaming.v1alpha.ListGameServerDeploymentsResponse.next_page_token] to
  // determine if there are more GameServerDeployments left to be queried.
  int32 page_size = 2 [(google.api.field_behavior) = OPTIONAL];

  // Optional. The next_page_token value returned from a previous List request,
  // if any.
  string page_token = 3 [(google.api.field_behavior) = OPTIONAL];

  // Optional. The filter to apply to list results.
  string filter = 4 [(google.api.field_behavior) = OPTIONAL];

  // Optional. Specifies the ordering of results following syntax at
  // https://cloud.google.com/apis/design/design_patterns#sorting_order.
  string order_by = 5 [(google.api.field_behavior) = OPTIONAL];
}

// Response message for GameServerDeploymentsService.ListGameServerDeployments.
message ListGameServerDeploymentsResponse {
  // The list of game server delpoyments.
  repeated GameServerDeployment game_server_deployments = 1;

  // Token to retrieve the next page of results, or empty if there are no more
  // results in the list.
  string next_page_token = 2;

  // List of locations that could not be reached.
  repeated string unreachable_locations = 3 [deprecated = true];

  // List of locations that were not reachable.
  repeated string unreachable = 4;
}

// Request message for GameServerDeploymentsService.GetGameServerDeployment.
message GetGameServerDeploymentRequest {
  // Required. The name of the game server deployment to retrieve, using the
  // form:
  //
  // `projects/{project}/locations/{location}/gameServerDeployments/{deployment}`
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "gameservices.googleapis.com/GameServerDeployment"
    }
  ];
}

// Request message for
// GameServerDeploymentsService.GetGameServerDeploymentRollout.
message GetGameServerDeploymentRolloutRequest {
  // Required. The name of the game server deployment to retrieve, using the
  // form:
  //
  // `projects/{project}/locations/{location}/gameServerDeployments/{deployment}/rollout`
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "gameservices.googleapis.com/GameServerDeployment"
    }
  ];
}

// Request message for GameServerDeploymentsService.CreateGameServerDeployment.
message CreateGameServerDeploymentRequest {
  // Required. The parent resource name, using the form:
  // `projects/{project}/locations/{location}`.
  string parent = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "gameservices.googleapis.com/GameServerDeployment"
    }
  ];

  // Required. The ID of the game server deployment resource to be created.
  string deployment_id = 2 [(google.api.field_behavior) = REQUIRED];

  // Required. The game server deployment resource to be created.
  GameServerDeployment game_server_deployment = 3 [(google.api.field_behavior) = REQUIRED];
}

// Request message for GameServerDeploymentsService.DeleteGameServerDeployment.
message DeleteGameServerDeploymentRequest {
  // Required. The name of the game server deployment to delete, using the form:
  //
  // `projects/{project}/locations/{location}/gameServerDeployments/{deployment}`
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "gameservices.googleapis.com/GameServerDeployment"
    }
  ];
}

// Request message for GameServerDeploymentsService.UpdateGameServerDeployment.
// Only allows updates for labels.
message UpdateGameServerDeploymentRequest {
  // Required. The game server deployment to be updated.
  // Only fields specified in update_mask are updated.
  GameServerDeployment game_server_deployment = 1 [(google.api.field_behavior) = REQUIRED];

  // Required. Mask of fields to update. At least one path must be supplied in
  // this field. For the `FieldMask` definition, see
  //
  // https:
  // //developers.google.com/protocol-buffers
  // // /docs/reference/google.protobuf#fieldmask
  google.protobuf.FieldMask update_mask = 2 [(google.api.field_behavior) = REQUIRED];
}

// Request message for
// GameServerDeploymentsService.UpdateGameServerRolloutDeployment.
message UpdateGameServerDeploymentRolloutRequest {
  // Required. The game server deployment rollout to be updated.
  // Only fields specified in update_mask are updated.
  GameServerDeploymentRollout rollout = 1 [(google.api.field_behavior) = REQUIRED];

  // Required. Mask of fields to update. At least one path must be supplied in
  // this field. For the `FieldMask` definition, see
  //
  // https:
  // //developers.google.com/protocol-buffers
  // // /docs/reference/google.protobuf#fieldmask
  google.protobuf.FieldMask update_mask = 2 [(google.api.field_behavior) = REQUIRED];
}

// Request message for GameServerDeploymentsService.FetchDeploymentState.
message FetchDeploymentStateRequest {
  // Required. The name of the game server deployment, using the form:
  //
  // `projects/{project}/locations/{location}/gameServerDeployments/{deployment}`
  string name = 1 [(google.api.field_behavior) = REQUIRED];
}

// Response message for GameServerDeploymentsService.FetchDeploymentState.
message FetchDeploymentStateResponse {
  // Details of the deployed fleet.
  message DeployedFleetDetails {
    // Fleet specification and details.
    message Fleet {
      // FleetStatus has details about the fleets like how many are running,
      // how many allocated and so on.
      message FleetStatus {
        // The number of available servers.
        // The are no players connected to this servers.
        int64 available_count = 1;

        // The number of allocated servers.
        // These are servers allocated to game sessions.
        int64 allocated_count = 2;

        // The number of reserved servers.
        // Reserved instances won't be deleted on scale down, but won't cause
        // an autoscaler to scale up.
        int64 reserved_count = 3;

        // The total number of current GameServer replicas.
        int64 replica_count = 4;
      }

      // The name of the Agones game server fleet.
      string name = 1;

      // The Agones fleet spec.
      // This is sent because it is possible that we may no longer have the
      // corresponding game server config in our systems.
      string agones_spec = 2;

      // The cluster name.
      string cluster = 3;

      // The source spec that is used to create the fleet.
      // The game server config and fleet config may no longer
      // exist in the system.
      SpecSource spec_source = 4;

      // The current status of the fleet.
      // Includes count of game servers in various states.
      FleetStatus status = 5;
    }

    // Details about the autoscaler.
    message FleetAutoscaler {
      // The name of the Agones autoscaler.
      string autoscaler_name = 1;

      // The source spec that is used to create the autoscaler.
      // The game server config and scaling config may no longer
      // exist in the system.
      SpecSource spec_source = 4;

      // The autoscaler spec.
      // This is sent because it is possible that we may no longer have the
      // corresponding game server config in our systems.
      string fleet_autoscaler_spec = 3;
    }

    // Information about the agones fleet.
    Fleet fleet = 1;

    // Information about the agones autoscaler for that fleet.
    FleetAutoscaler autoscaler = 2;
  }

  // The details of a deployment in a given location.
  repeated DeployedFleetDetails details = 1;

  // List of locations that could not be reached.
  repeated string unavailable = 2;
}

// A game server deployment resource.
message GameServerDeployment {
  option (google.api.resource) = {
    type: "gameservices.googleapis.com/GameServerDeployment"
    pattern: "projects/{project}/locations/{location}/gameServerDeployments/{deployment}"
  };

  // The resource name of the game server deployment, using the form:
  //
  // `projects/{project}/locations/{location}/gameServerDeployments/{deployment}`.
  // For example,
  //
  // `projects/my-project/locations/{location}/gameServerDeployments/my-deployment`.
  string name = 1;

  // Output only. The creation time.
  google.protobuf.Timestamp create_time = 2 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Output only. The last-modified time.
  google.protobuf.Timestamp update_time = 3 [(google.api.field_behavior) = OUTPUT_ONLY];

  // The labels associated with this game server deployment. Each label is a
  // key-value pair.
  map<string, string> labels = 4;

  // ETag of the resource.
  string etag = 7;

  // Human readable description of the game server deployment.
  string description = 8;
}

// A game server config override.
message GameServerConfigOverride {
  // Selector chooses the game server config targets.
  oneof selector {
    // Selector for choosing applicable realms.
    RealmSelector realms_selector = 1;
  }

  // Actuator selects the game server config and how it should be applied.
  oneof change {
    // The game server config for this override.
    string config_version = 100;
  }
}

// The game server deployment rollout which represents the rollout state.
message GameServerDeploymentRollout {
  option (google.api.resource) = {
    type: "gameservices.googleapis.com/GameServerDeploymentRollout"
    pattern: "projects/{project}/locations/{location}/gameServerDeployments/{deployment}/rollout"
  };

  // The resource name of the game server deployment rollout, using the form:
  //
  // `projects/{project}/locations/{location}/gameServerDeployments/{deployment}/rollout`.
  // For example,
  //
  // `projects/my-project/locations/{location}/gameServerDeployments/my-deployment/rollout`.
  string name = 1;

  // Output only. The creation time.
  google.protobuf.Timestamp create_time = 2 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Output only. The last-modified time.
  google.protobuf.Timestamp update_time = 3 [(google.api.field_behavior) = OUTPUT_ONLY];

  // The default game server config points to the game server config  that is
  // applied in all realms/clustesr. For example,
  //
  // `projects/my-project/locations/global/gameServerDeployments/my-game/configs/my-config`.
  string default_game_server_config = 4;

  // Contains the per game server config overrides. The overrides are processed
  // in the order they are listed. As soon as a match is found for cluster,
  // the rest of the list is not processed.
  repeated GameServerConfigOverride game_server_config_overrides = 5;

  // ETag of the resource.
  string etag = 6;
}

// Request message for PreviewGameServerDeploymentRollout.
message PreviewGameServerDeploymentRolloutRequest {
  // Required. The game server deployment rollout to be updated.
  // Only fields specified in update_mask are updated.
  GameServerDeploymentRollout rollout = 1 [(google.api.field_behavior) = REQUIRED];

  // Optional. Mask of fields to update. At least one path must be supplied in
  // this field. For the `FieldMask` definition, see
  //
  // https:
  // //developers.google.com/protocol-buffers
  // // /docs/reference/google.protobuf#fieldmask
  google.protobuf.FieldMask update_mask = 2 [(google.api.field_behavior) = OPTIONAL];

  // Optional. The instant of time at which the preview needs to be computed. If
  // unspecified, defaults to the time after the suggested rollout finishes.
  google.protobuf.Timestamp preview_time = 3 [(google.api.field_behavior) = OPTIONAL];
}

// Response message for PreviewGameServerDeploymentRollout.
// This has details about the fleet and the autoscaler.
message PreviewGameServerDeploymentRolloutResponse {
  // The deployed state.
  DeployedState deployed_state = 1 [deprecated = true];

  // Locations that could not be reached on this request.
  repeated string unavailable = 2;

  // ETag of the game server deployment.
  string etag = 3;

  // The target state.
  TargetState target_state = 4;
}
